# lifeos

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/lifeos/: __init__.py  __main__.py  agent.py  bot.py  calendar_tools.py  cli.py  db.py  google_auth.py  google_calendar.py  logging.py  reminder_tools.py  speech.py
src/lifeos/calendar/: __init__.py  tools.py
src/lifeos/gmail/: __init__.py  api.py  tools.py
